[tool.poetry]
name = "scout"
version = "0.1.0"
description = "Scout the FTC team scouting bot."
authors = ["ryleu <riley.j.mclain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.0.0-alpha.3"
discord-py-interactions = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
